[DOCS] Modify ML analytical functions (elastic/x-pack-elasticsearch#1467)
* [DOCS] Modify ML analytical functions

* [DOCS] Fix ML function section titles

Original commit: elastic/x-pack-elasticsearch@f95ae012bbb2eb86f1c7958936c6b7f1c2f8eb33

--- a/docs/en/ml/functions/metric.asciidoc
+++ b/docs/en/ml/functions/metric.asciidoc
@@ -9,16 +9,10 @@ The {xpackml} features include the following metric functions:
 
 * <<ml-metric-min,`min`>>
 * <<ml-metric-max,`max`>>
-* <<ml-metric-median,`median`>>
-* <<ml-metric-high-median,`high_median`>>
-* <<ml-metric-low-median,`low_median`>>
-* <<ml-metric-mean,`mean`>>
-* <<ml-metric-high-mean,`high_mean`>>
-* <<ml-metric-low-mean,`low_mean`>>
+* xref:ml-metric-median[`median`, `high_median`, `low_median`]
+* xref:ml-metric-mean[`mean`, `high_mean`, `low_mean`]
 * <<ml-metric-metric,`metric`>>
-* <<ml-metric-varp,`varp`>>
-* <<ml-metric-high-varp,`high_varp`>>
-* <<ml-metric-low-varp,`low_varp`>>
+* xref:ml-metric-varp[`varp`, `high_varp`, `low_varp`]
 
 [float]
 [[ml-metric-min]]
@@ -35,18 +29,11 @@ This function supports the following properties:
 * `by_field_name` (optional)
 * `over_field_name` (optional)
 * `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
 
 For more information about those properties,
 see <<ml-detectorconfig,Detector Configuration Objects>>.
 
-For example, if you use the following function in a detector in your job,
-it detects where the smallest transaction is lower than previously observed.
-You can use this function to detect items for sale at unintentionally low
-prices due to data entry mistakes. It models the minimum amount for each
-product over time.
-//Detect when the minumum amount for a product is unusually low compared to its past amounts
-
+.Example 1: Analyzing minimum transactions with the min function
 [source,js]
 --------------------------------------------------
 {
@@ -56,6 +43,10 @@ product over time.
 }
 --------------------------------------------------
 
+If you use this `min` function in a detector in your job, it detects where the
+smallest transaction is lower than previously observed. You can use this
+function to detect items for sale at unintentionally low prices due to data
+entry mistakes. It models the minimum amount for each product over time.
 
 [float]
 [[ml-metric-max]]
@@ -72,18 +63,11 @@ This function supports the following properties:
 * `by_field_name` (optional)
 * `over_field_name` (optional)
 * `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
 
 For more information about those properties,
 see <<ml-detectorconfig,Detector Configuration Objects>>.
 
-For example, if you use the following function in a detector in your job,
-it detects where the longest `responsetime` is longer than previously observed.
-You can use this function to detect applications that have `responsetime`
-values that are unusually lengthy. It models the maximum `responsetime` for
-each application over time and detects when the longest `responsetime` is
-unusually long compared to previous applications.
-
+.Example 2: Analyzing maximum response times with the max function
 [source,js]
 --------------------------------------------------
 {
@@ -93,11 +77,14 @@ unusually long compared to previous applications.
 }
 --------------------------------------------------
 
-This analysis can be performed alongside `high_mean` functions by
-application. By combining detectors and using the same influencer this would
-detect both unusually long individual response times and average response times
-for each bucket. For example:
+If you use this `max` function in a detector in your job, it detects where the
+longest `responsetime` is longer than previously observed. You can use this
+function to detect applications that have `responsetime` values that are
+unusually lengthy. It models the maximum `responsetime` for each application
+over time and detects when the longest `responsetime` is unusually long compared
+to previous applications.
 
+.Example 3: Two detectors with max and high_mean functions
 [source,js]
 --------------------------------------------------
 {
@@ -112,29 +99,35 @@ for each bucket. For example:
 }
 --------------------------------------------------
 
+The analysis in the previous example can be performed alongside `high_mean`
+functions by application. By combining detectors and using the same influencer
+this job can detect both unusually long individual response times and average
+response times for each bucket.
+
 [float]
 [[ml-metric-median]]
-==== Median
+==== Median, High_median, Low_median
 
 The `median` function detects anomalies in the statistical median of a value.
 The median value is calculated for each bucket.
 
-This function supports the following properties:
+If you want to monitor unusually high median values, use the `high_median`
+function.
+
+If you are just interested in unusually low median values, use the `low_median`
+function.
+
+These functions support the following properties:
 
 * `field_name` (required)
 * `by_field_name` (optional)
 * `over_field_name` (optional)
 * `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
 
 For more information about those properties,
 see <<ml-detectorconfig,Detector Configuration Objects>>.
 
-For example, if you use the following function in a detector in your job,
-it models the median `responsetime` for each application over time. It detects
-when the median `responsetime` is unusual compared to previous `responsetime`
-values.
-
+.Example 4: Analyzing response times with the median function
 [source,js]
 --------------------------------------------------
 {
@@ -144,68 +137,34 @@ values.
 }
 --------------------------------------------------
 
-[float]
-[[ml-metric-high-median]]
-==== High_median
-
-The `high_median` function detects anomalies in the statistical median of a value.
-The median value is calculated for each bucket.
-Use this function if you want to monitor unusually high median values.
-
-This function supports the following properties:
-
-* `field_name` (required)
-* `by_field_name` (optional)
-* `over_field_name` (optional)
-* `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
-
-For more information about those properties,
-see <<ml-detectorconfig,Detector Configuration Objects>>.
-
-[float]
-[[ml-metric-low-median]]
-==== Low_median
-
-The `low_median` function detects anomalies in the statistical median of a value.
-The median value is calculated for each bucket.
-Use this function if you are just interested in unusually low median values.
-
-This function supports the following properties:
-
-* `field_name` (required)
-* `by_field_name` (optional)
-* `over_field_name` (optional)
-* `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
-
-For more information about those properties,
-see <<ml-detectorconfig,Detector Configuration Objects>>.
-
+If you use this `median` function in a detector in your job, it models the
+median `responsetime` for each application over time. It detects when the median
+`responsetime` is unusual compared to previous `responsetime` values.
 
 [float]
 [[ml-metric-mean]]
-==== Mean
+==== Mean, High_mean, Low_mean
 
 The `mean` function detects anomalies in the arithmetic mean of a value.
 The mean value is calculated for each bucket.
 
-This function supports the following properties:
+If you want to monitor unusually high average values, use the `high_mean`
+function.
+
+If you are just interested in unusually low average values, use the `low_mean`
+function.
+
+These functions support the following properties:
 
 * `field_name` (required)
 * `by_field_name` (optional)
 * `over_field_name` (optional)
 * `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
 
 For more information about those properties,
 see <<ml-detectorconfig,Detector Configuration Objects>>.
 
-For example, if you use the following function in a detector in your job,
-it models the mean `responsetime` for each application over time. It detects
-when the mean `responsetime` is unusual compared to previous `responsetime`
-values.
-
+.Example 5: Analyzing response times with the mean function
 [source,js]
 --------------------------------------------------
 {
@@ -215,30 +174,11 @@ values.
 }
 --------------------------------------------------
 
-[float]
-[[ml-metric-high-mean]]
-==== High_mean
+If you use this `mean` function in a detector in your job, it models the mean
+`responsetime` for each application over time. It detects when the mean
+`responsetime` is unusual compared to previous `responsetime` values.
 
-The `high_mean` function detects anomalies in the arithmetic mean of a value.
-The mean value is calculated for each bucket.
-Use this function if you want to monitor unusually high average values.
-
-This function supports the following properties:
-
-* `field_name` (required)
-* `by_field_name` (optional)
-* `over_field_name` (optional)
-* `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
-
-For more information about those properties,
-see <<ml-detectorconfig,Detector Configuration Objects>>.
-
-For example, if you use the following function in a detector in your job,
-it models the mean `responsetime` for each application over time. It detects
-when the mean `responsetime` is unusually high compared to previous
-`responsetime` values.
-
+.Example 6: Analyzing response times with the high_mean function
 [source,js]
 --------------------------------------------------
 {
@@ -248,30 +188,11 @@ when the mean `responsetime` is unusually high compared to previous
 }
 --------------------------------------------------
 
-[float]
-[[ml-metric-low-mean]]
-==== Low_mean
+If you use this `high_mean` function in a detector in your job, it models the
+mean `responsetime` for each application over time. It detects when the mean
+`responsetime` is unusually high compared to previous `responsetime` values.
 
-The `low_mean` function detects anomalies in the arithmetic mean of a value.
-The mean value is calculated for each bucket.
-Use this function if you are just interested in unusually low average values.
-
-This function supports the following properties:
-
-* `field_name` (required)
-* `by_field_name` (optional)
-* `over_field_name` (optional)
-* `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
-
-For more information about those properties,
-see <<ml-detectorconfig,Detector Configuration Objects>>.
-
-For example, if you use the following function in a detector in your job,
-it models the mean `responsetime` for each application over time. It detects
-when the mean `responsetime` is unusually low
-compared to previous `responsetime` values.
-
+.Example 7: Analyzing response times with the low_mean function
 [source,js]
 --------------------------------------------------
 {
@@ -280,6 +201,10 @@ compared to previous `responsetime` values.
   "by_field_name" : "application"
 }
 --------------------------------------------------
+
+If you use this `low_mean` function in a detector in your job, it models the
+mean `responsetime` for each application over time. It detects when the mean
+`responsetime` is unusually low compared to previous `responsetime` values.
 
 [float]
 [[ml-metric-metric]]
@@ -303,11 +228,7 @@ This function supports the following properties:
 For more information about those properties,
 see <<ml-detectorconfig,Detector Configuration Objects>>.
 
-For example, if you use the following function in a detector in your job,
-it models the mean, min, and max `responsetime` for each application over time.
-It detects when the mean, min, or max `responsetime` is unusual compared to
-previous `responsetime` values.
-
+.Example 8: Analyzing response times with the metric function
 [source,js]
 --------------------------------------------------
 {
@@ -317,30 +238,33 @@ previous `responsetime` values.
 }
 --------------------------------------------------
 
+If you use this `metric` function in a detector in your job, it models the
+mean, min, and max `responsetime` for each application over time. It detects
+when the mean, min, or max `responsetime` is unusual compared to previous
+`responsetime` values.
 
 [float]
 [[ml-metric-varp]]
-==== Varp
+==== Varp, High_varp, Low_varp
 
 The `varp` function detects anomalies in the variance of a value which is a
 measure of the variability and spread in the data.
 
-This function supports the following properties:
+If you want to monitor unusually high variance, use the `high_varp` function.
+
+If you are just interested in unusually low variance, use the `low_varp` function.
+
+These functions support the following properties:
 
 * `field_name` (required)
 * `by_field_name` (optional)
 * `over_field_name` (optional)
 * `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
 
 For more information about those properties,
 see <<ml-detectorconfig,Detector Configuration Objects>>.
 
-For example, if you use the following function in a detector in your job,
-it models models the variance in values of `responsetime` for each application
-over time. It detects when the variance in `responsetime` is unusual compared
-to past application behavior.
-
+.Example 9: Analyzing response times with the varp function
 [source,js]
 --------------------------------------------------
 {
@@ -350,30 +274,12 @@ to past application behavior.
 }
 --------------------------------------------------
 
-[float]
-[[ml-metric-high-varp]]
-==== High_varp
+If you use this `varp` function in a detector in your job, it models the
+variance in values of `responsetime` for each application over time. It detects
+when the variance in `responsetime` is unusual compared to past application
+behavior.
 
-The `high_varp` function detects anomalies in the variance of a value which is a
-measure of the variability and spread in the data. Use this function if you want
-to monitor unusually high variance.
-
-This function supports the following properties:
-
-* `field_name` (required)
-* `by_field_name` (optional)
-* `over_field_name` (optional)
-* `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
-
-For more information about those properties,
-see <<ml-detectorconfig,Detector Configuration Objects>>.
-
-For example, if you use the following function in a detector in your job,
-it models models the variance in values of `responsetime` for each application
-over time. It detects when the variance in `responsetime` is unusual compared
-to past application behavior.
-
+.Example 10: Analyzing response times with the high_varp function
 [source,js]
 --------------------------------------------------
 {
@@ -383,31 +289,12 @@ to past application behavior.
 }
 --------------------------------------------------
 
+If you use this `high_varp` function in a detector in your job, it models the
+variance in values of `responsetime` for each application over time. It detects
+when the variance in `responsetime` is unusual compared to past application
+behavior.
 
-[float]
-[[ml-metric-low-varp]]
-==== Low_varp
-
-The `low_varp` function detects anomalies in the variance of a value which is a
-measure of the variability and spread in the data. Use this function if you are
-just interested in unusually low variance.
-
-This function supports the following properties:
-
-* `field_name` (required)
-* `by_field_name` (optional)
-* `over_field_name` (optional)
-* `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
-
-For more information about those properties,
-see <<ml-detectorconfig,Detector Configuration Objects>>.
-
-For example, if you use the following function in a detector in your job,
-it models models the variance in values of `responsetime` for each application
-over time. It detects when the variance in `responsetime` is unusual compared
-to past application behavior.
-
+.Example 11: Analyzing response times with the low_varp function
 [source,js]
 --------------------------------------------------
 {
@@ -416,3 +303,8 @@ to past application behavior.
   "by_field_name" : "application"
 }
 --------------------------------------------------
+
+If you use this `low_varp` function in a detector in your job, it models the
+variance in values of `responsetime` for each application over time. It detects
+when the variance in `responsetime` is unusual compared to past application
+behavior.
