--- a/docs/en/ml/functions/sum.asciidoc
+++ b/docs/en/ml/functions/sum.asciidoc
@@ -13,12 +13,8 @@ ignored; buckets with a zero value are analyzed.
 
 The {xpackml} features include the following sum functions:
 
-* <<ml-sum,`sum`>>
-* <<ml-high-sum,`high_sum`>>
-* <<ml-low-sum,`low_sum`>>
-* <<ml-nonnull-sum,`non_null_sum`>>
-* <<ml-high-nonnull-sum,`high_non_null_sum`>>
-* <<ml-low-nonnull-sum,`low_non_null_sum`>>
+* xref:ml-sum[`sum`, `high_sum`, `low_sum`]
+* xref:ml-nonnull-sum[`non_null_sum`, `high_non_null_sum`, `low_non_null_sum`]
 
 ////
 TBD: Incorporate from prelert docs?:
@@ -29,27 +25,26 @@ a more appropriate method to using the sum function.
 
 [float]
 [[ml-sum]]
-==== Sum
+==== Sum, High_sum, Low_sum
 
 The `sum` function detects anomalies where the sum of a field in a bucket is
 anomalous.
 
-This function supports the following properties:
+If you want to monitor unusually high sum values, use the `high_sum` function.
+
+If you want to monitor unusually low sum values, use the `low_sum` function.
+
+These functions support the following properties:
 
 * `field_name` (required)
 * `by_field_name` (optional)
 * `over_field_name` (optional)
 * `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
 
 For more information about those properties,
 see <<ml-detectorconfig,Detector Configuration Objects>>.
 
-For example, if you use the following function in a detector in your job, it
-models total expenses per employees for each cost center. For each time bucket,
-it detects when an employee’s expenses are unusual for a cost center compared
-to other employees. 
-
+.Example 1: Analyzing total expenses with the sum function
 [source,js]
 --------------------------------------------------
 {
@@ -60,28 +55,12 @@ to other employees.
 }
 --------------------------------------------------
 
-[float]
-[[ml-high-sum]]
-==== High_sum
+If you use this `sum` function in a detector in your job, it
+models total expenses per employees for each cost center. For each time bucket,
+it detects when an employee’s expenses are unusual for a cost center compared
+to other employees.
 
-The `high_sum` function detects anomalies where the sum of a field in a bucket
-is unusually high.
-
-This function supports the following properties:
-
-* `field_name` (required)
-* `by_field_name` (optional)
-* `over_field_name` (optional)
-* `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
-
-For more information about those properties,
-see <<ml-detectorconfig,Detector Configuration Objects>>.
-
-For example, if you use the following function in a detector in your job, it
-models total `cs_bytes`. It detects `cs_hosts` that transfer unusually high
-volumes compared to other `cs_hosts`.
-
+.Example 2: Analyzing total bytes with the high_sum function
 [source,js]
 --------------------------------------------------
 {
@@ -91,42 +70,30 @@ volumes compared to other `cs_hosts`.
 }
 --------------------------------------------------
 
-This example looks for volumes of data transferred from a client to a server on
-the internet that are unusual compared to other clients. This scenario could be
-useful to detect data exfiltration or to find users that are abusing internet
-privileges.
-
-[float]
-[[ml-low-sum]]
-==== Low_sum
-
-The `low_sum` function detects anomalies where the sum of a field in a bucket
-is unusually low.
-
-This function supports the following properties:
-
-* `field_name` (required)
-* `by_field_name` (optional)
-* `over_field_name` (optional)
-* `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
-
-For more information about those properties,
-see <<ml-detectorconfig,Detector Configuration Objects>>.
+If you use this `high_sum` function in a detector in your job, it
+models total `cs_bytes`. It detects `cs_hosts` that transfer unusually high
+volumes compared to other `cs_hosts`. This example looks for volumes of data
+transferred from a client to a server on the internet that are unusual compared
+to other clients. This scenario could be useful to detect data exfiltration or
+to find users that are abusing internet privileges.
 
 [float]
 [[ml-nonnull-sum]]
-==== Non_null_sum
+==== Non_null_sum, High_non_null_sum, Low_non_null_sum
 
 The `non_null_sum` function is useful if your data is sparse. Buckets without
 values are ignored and buckets with a zero value are analyzed.
 
-This function supports the following properties:
+If you want to monitor unusually high totals, use the `high_non_null_sum`
+function.
+
+If you want to look at drops in totals, use the `low_non_null_sum` function.
+
+These functions support the following properties:
 
 * `field_name` (required)
 * `by_field_name` (optional)
 * `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
 
 For more information about those properties,
 see <<ml-detectorconfig,Detector Configuration Objects>>.
@@ -134,32 +101,7 @@ see <<ml-detectorconfig,Detector Configuration Objects>>.
 NOTE: Population analysis (that is to say, use of the `over_field_name` property)
 is not applicable for this function.
 
-[float]
-[[ml-high-nonnull-sum]]
-==== High_non_null_sum
-
-The `high_non_null_sum` function is useful if your data is sparse. Buckets
-without values are ignored and buckets with a zero value are analyzed.
-Use this function if you want to monitor unusually high totals.
-
-This function supports the following properties:
-
-* `field_name` (required)
-* `by_field_name` (optional)
-* `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
-
-For more information about those properties,
-see <<ml-detectorconfig,Detector Configuration Objects>>.
-
-NOTE: Population analysis (that is to say, use of the `over_field_name` property)
-is not applicable for this function.
-
-For example, if you use the following function in a detector in your job, it
-models the total `amount_approved` for each employee. It ignores any buckets
-where the amount is null. It detects employees who approve unusually high
-amounts compared to their past behavior.
-
+.Example 3: Analyzing employee approvals with the high_non_null_sum function
 [source,js]
 --------------------------------------------------
 {
@@ -169,26 +111,9 @@ amounts compared to their past behavior.
 }
 --------------------------------------------------
 
+If you use this `high_non_null_sum` function in a detector in your job, it
+models the total `amount_approved` for each employee. It ignores any buckets
+where the amount is null. It detects employees who approve unusually high
+amounts compared to their past behavior.
 //For this credit control system analysis, using non_null_sum will ignore
 //periods where the employees are not active on the system.
-
-[float]
-[[ml-low-nonnull-sum]]
-==== Low_non_null_sum
-
-The `low_non_null_sum` function is useful if your data is sparse. Buckets
-without values are ignored and buckets with a zero value are analyzed.
-Use this function if you want to look at drops in totals.
-
-This function supports the following properties:
-
-* `field_name` (required)
-* `by_field_name` (optional)
-* `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
-
-For more information about those properties,
-see <<ml-detectorconfig,Detector Configuration Objects>>.
-
-NOTE: Population analysis (that is to say, use of the `over_field_name` property)
-is not applicable for this function.
