--- a/docs/en/ml/functions/time.asciidoc
+++ b/docs/en/ml/functions/time.asciidoc
@@ -47,16 +47,11 @@ This function supports the following properties:
 * `by_field_name` (optional)
 * `over_field_name` (optional)
 * `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
 
 For more information about those properties,
 see <<ml-detectorconfig,Detector Configuration Objects>>.
 
-For example, if you use the following function in a detector in your job, it
-models when events occur throughout a day for each process. It detects when an
-event occurs for a process that is at an unusual time in the day compared to
-its past behavior.
-
+.Example 1: Analyzing events with the time_of_day function
 [source,js]
 --------------------------------------------------
 {
@@ -65,6 +60,10 @@ its past behavior.
 }
 --------------------------------------------------
 
+If you use this `time_of_day` function in a detector in your job, it
+models when events occur throughout a day for each process. It detects when an
+event occurs for a process that is at an unusual time in the day compared to
+its past behavior.
 
 [float]
 [[ml-time-of-week]]
@@ -78,17 +77,11 @@ This function supports the following properties:
 * `by_field_name` (optional)
 * `over_field_name` (optional)
 * `partition_field_name` (optional)
-* `summary_count_field_name` (optional)
 
 For more information about those properties,
 see <<ml-detectorconfig,Detector Configuration Objects>>.
 
-For example, if you use the following function in a detector in your job, it
-models when events occur throughout the week for each `eventcode`. It detects
-when a workstation event occurs at an unusual time during the week for that
-`eventcode` compared to other workstations. It detects events for a
-particular workstation that are outside the normal usage pattern.
-
+.Example 2: Analyzing events with the time_of_week function
 [source,js]
 --------------------------------------------------
 {
@@ -97,3 +90,9 @@ particular workstation that are outside the normal usage pattern.
   "over_field_name" : "workstation"
 }
 --------------------------------------------------
+
+If you use this `time_of_week` function in a detector in your job, it
+models when events occur throughout the week for each `eventcode`. It detects
+when a workstation event occurs at an unusual time during the week for that
+`eventcode` compared to other workstations. It detects events for a
+particular workstation that are outside the normal usage pattern.
