--- a/docs/en/ml/index.asciidoc
+++ b/docs/en/ml/index.asciidoc
@@ -29,6 +29,7 @@ from {es} for analysis and anomaly results are displayed in {kib} dashboards.
 
 include::overview.asciidoc[]
 include::getting-started.asciidoc[]
+include::configuring.asciidoc[]
 // include::ml-scenarios.asciidoc[]
 include::api-quickref.asciidoc[]
 //include::troubleshooting.asciidoc[]  Referenced from x-pack/docs/public/xpack-troubleshooting.asciidoc
