Watcher: Support setting of markdown in attachments (elastic/x-pack-elasticsearch#1492)
Watcher: Support setting of markdown in attachments

This allows to set the `mrkdwn_in` array in slack attachments to specify which fields should contain markdown.
See https://api.slack.com/docs/message-formatting#message_formatting

This is mainly useful for the text and pretext fields in an attachment.

relates elastic/x-pack-elasticsearch#403

Original commit: elastic/x-pack-elasticsearch@ee4180e4bfdd22e42aa2948fcd3e06311c1bafed

--- a/docs/en/watcher/actions/slack.asciidoc
+++ b/docs/en/watcher/actions/slack.asciidoc
@@ -222,6 +222,7 @@ xpack.notification.slack:
           title: "X-Pack Notification"
           title_link: "https://www.elastic.co/guide/en/x-pack/current/index.html"
           text: "One of your watches generated this notification."
+          mrkdwn_in: "pretext, text"
 --------------------------------------------------
 
 If you configure multiple Slack accounts, you either need to configure a default 
