--- a/docs/en/ml/configuring.asciidoc
+++ b/docs/en/ml/configuring.asciidoc
@@ -23,11 +23,11 @@ you visualize and explore the results.
 For a tutorial that walks you through these configuration steps,
 see <<ml-getting-started>>.
 
-//Though it is quite simple to analyze your data and provide quick {ml} results,
-//gaining deep insights might require some additional planning and configuration.
-//The scenarios in this section describe some best practices for generating useful
-//{ml} results and insights from your data.
+Though it is quite simple to analyze your data and provide quick {ml} results,
+gaining deep insights might require some additional planning and configuration.
+The scenarios in this section describe some best practices for generating useful
+{ml} results and insights from your data.
 
-//* <<ml-configuring-aggregation>>
+* <<ml-configuring-aggregation>>
 
-//include::aggregations.asciidoc[]
+include::aggregations.asciidoc[]
