--- a/docs/en/rest-api/ml/datafeedresource.asciidoc
+++ b/docs/en/rest-api/ml/datafeedresource.asciidoc
@@ -6,36 +6,10 @@ A {dfeed} resource has the following properties:
 
 `aggregations`::
   (object) If set, the {dfeed} performs aggregation searches.
-  For syntax information, see {ref}/search-aggregations.html[Aggregations].
   Support for aggregations is limited and should only be used with
-  low cardinality data. For example:
-+
---
-[source,js]
-----------------------------------
-{
-  "@timestamp": {
-    "histogram": {
-      "field": "@timestamp",
-      "interval": 30000,
-      "offset": 0,
-      "order": {"_key": "asc"},
-      "keyed": false,
-      "min_doc_count": 0
-    },
-    "aggregations": {
-      "events_per_min": {
-        "sum": {
-          "field": "events_per_min"
-        }
-      }
-    }
-  }
-}
-----------------------------------
---
+  low cardinality data. For more information,
+  see <<ml-configuring-aggregation>>.
 
-//TBD link to a Working with aggregations page
 `chunking_config`::
   (object) Specifies how data searches are split into time chunks.
   See <<ml-datafeed-chunking-config>>.
