Fix bad link for Nexus OSS
Related to elastic/x-pack-elasticsearch#1301

Original commit: elastic/x-pack-elasticsearch@2273e8ba2449b0f166957401a27cafebd1da0d41

--- a/docs/en/security/tribe-clients-integrations/java.asciidoc
+++ b/docs/en/security/tribe-clients-integrations/java.asciidoc
@@ -90,7 +90,7 @@ dependencies {
 --------------------------------------------------------------
 --
 
-If you are using a repository manager such as [Nexus OSS](https://www.sonatype.com/nexus-repository-oss) within your
+If you are using a repository manager such as https://www.sonatype.com/nexus-repository-oss[Nexus OSS] within your
 company, you need to add the repository as per the following screenshot:
 
 +
