[DOCS] Change POST to PUT in ML API QuickRef (elastic/x-pack-elasticsearch#1617)
Original commit: elastic/x-pack-elasticsearch@036fd4d5488d944ab0d49d7942d55d310eb091a7

--- a/docs/en/ml/api-quickref.asciidoc
+++ b/docs/en/ml/api-quickref.asciidoc
@@ -20,7 +20,7 @@ The main {ml} resources can be accessed with a variety of endpoints:
 [[ml-api-jobs]]
 === /anomaly_detectors/
 
-* <<ml-put-job,POST /anomaly_detectors>>: Create a job
+* <<ml-put-job,PUT /anomaly_detectors/<job_id+++>+++>>: Create a job
 * <<ml-open-job,POST /anomaly_detectors/<job_id>/_open>>: Open a job
 * <<ml-post-data,POST /anomaly_detectors/<job_id>/_data>>: Send data to a job
 * <<ml-get-job,GET /anomaly_detectors>>: List jobs
